new snapshot, clojure 1.10.1, debug illegal-access, hide reflection warnings